--- a/about.html
+++ b/about.html
@@ -26,11 +26,9 @@
       <h1>Our Story</h1>
       <p class="intro">Handmade, recycled, and created with care in Dorset.</p>
     </section>
-<img
-      src="images/daveandrea.jpeg"
-      alt="Dave and Andrea of MTNestCrafts"
-      class="about-photo small-photo"
-    />
+<img src="images/daveandrea.jpeg" class="about-photo-small" alt="Dave and Andrea"/>
+
+    
     <section class="text-block">
   <h2 class="name-heading">Andrea</h2>
 
@@ -63,11 +61,9 @@
 
 
    <section class="about-image">
-  <img
-  src="images/mini-map-lampshade-fairylights.jpg"
-  alt="MTNestCrafts workshop with handmade fairy lights and recycled crafts"
-  class="about-photo"
-/>
+ <img src="images/mini-map-lampshade-fairylights.jpg" class="about-photo-small" alt="Mini lampshade fairy lights"/>
+
+
 
 </section>
 
@@ -105,11 +101,12 @@
   <div class="about-image-grid">
     
 
-    <img
-      src="images/dave-copper-creations.jpg"
-      alt="Copper creations handmade by Dave"
-      class="about-photo small-photo"
-    />
+   <img
+  src="images/dave-copper-creations.jpg"
+  alt="Copper creations handmade by Dave"
+  class="about-photo-small"
+/>
+
   </div>
 </div>
 
