--- a/about.html
+++ b/about.html
@@ -26,7 +26,10 @@
       <h1>Our Story</h1>
       <p class="intro">Handmade, recycled, and created with care in Dorset.</p>
     </section>
-<img src="images/daveandrea.jpeg" class="about-photo-small" alt="Dave and Andrea"/>
+<section class="about-image">
+  <img src="images/daveandrea.jpeg" class="about-photo-small" alt="Dave and Andrea" />
+</section>
+
 
     
     <section class="text-block">
