--- a/about.html
+++ b/about.html
@@ -71,17 +71,7 @@
 </section>
 
 
-    <section class="text-block">
-      <p>
-        We try to use as many recycled materials as possible and work closely with local businesses
-        who save items for us that would otherwise end up in landfill.
-      </p>
-
-      <p>
-        From bottles and festival cups to paper, fabric and wood — every piece tells a story
-        and helps reduce waste. #waronwaste
-      </p>
-    </section>
+  
 
     <section class="team">
      
@@ -111,6 +101,17 @@
 />
 
   </div>
+     <section class="text-block">
+      <p>
+        We try to use as many recycled materials as possible and work closely with local businesses
+        and neighbours who save items for us that would otherwise end up in landfill.
+      </p>
+
+      <p>
+        From bottles and festival cups to paper, fabric and wood — every piece tells a story
+        and helps reduce waste. 
+      </p>
+    </section>     
 </div>
 
 
