--- a/about.html
+++ b/about.html
@@ -120,8 +120,8 @@
   <h3>Sustainability Awards</h3>
 
   <p>
-    MTNestCrafts has been recognised for its commitment to sustainability,
-    reuse, and reducing waste.
+    MTNestCrafts has been recognised for its commitment to sustainability:
+    reusing and reducing waste.
   </p>
 
   <div class="about-image-grid">
