--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="hero-text">
     <h2>Slow-made. Sustainable. Full of character.</h2>
     <p>
-      Welcome to Mt Nest Crafts — a small eco-conscious craft studio creating unique handmade pieces
+      Welcome to Mt Nest Crafts — a small eco-conscious craft studio creating unique handmade mini lampshade fairylights, bottle lamps and other eco gifts
       designed to bring warmth, light and a little joy into everyday spaces.
     </p>
   </div>
