--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
   <main class="content">
     <section class="hero">
       <h1>Our Story</h1>
-      <p class="intro">Handmade, recycled, and created with care in Dorset.</p>
+      <p class="intro">Handmade, unique eco-gifts, created with care in Dorset.</p>
     </section>
 <section class="about-image">
   <img src="images/daveandrea.jpeg" class="about-photo-small" alt="Dave and Andrea" />
