--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
 <body>
 
 <header class="site-header">
-  <h1>Mt Nest Crafts</h1>
-  <p class="tagline">Handmade eco-friendly home décor & gifts</p>
+  <h1>Handmade Mini Lampshade Fairy Lights & Eco-Friendly Gifts</h1>
+ <p class="intro">
+    Welcome to MTNestCrafts, where recycled materials are transformed into beautiful,
+    handmade mini lampshade fairy lights and unique eco-friendly gifts. Designed and
+    made in Dorset, each piece is thoughtfully created to reduce waste and give
+    discarded materials a second life.
+  </p>
+</section>
 
   <nav>
    <a href="index.html" class="active">Home</a>
