--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About | MTNestCrafts</title>
+  <title>MTNestCrafts | Handmade Mini Lampshade Fairy Lights & Eco Gifts</title>
 
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -12,38 +12,32 @@
 <body>
 
 <header class="site-header">
-  <h1>Handmade Mini Lampshade Fairy Lights & Eco-Friendly Gifts</h1>
- <p class="intro">
-    Welcome to MTNestCrafts, where recycled materials are transformed into beautiful,
-    handmade mini lampshade fairy lights and unique eco-friendly gifts. Designed and
-    made in Dorset, each piece is thoughtfully created to reduce waste and give
-    discarded materials a second life.
-  </p>
-</section>
-
   <nav>
-   <a href="index.html" class="active">Home</a>
-
-    <a href="about.html" class="active">About</a>
-
-    <a href="shop.html" class="active">Shop</a>
-
-    <a href="contact.html" class="active">Contact</a>
-
+    <a href="index.html" class="active">Home</a>
+    <a href="about.html">About</a>
+    <a href="shop.html">Shop</a>
+    <a href="contact.html">Contact</a>
   </nav>
 </header>
 
 <section class="hero">
-  <div class="hero-text">
-    <h2>Slow-made. Sustainable. Full of character.</h2>
-    <p>
-      Welcome to Mt Nest Crafts — a small eco-conscious craft studio creating unique handmade mini lampshade fairylights, bottle lamps and other eco gifts
-      designed to bring warmth, light and a little joy into everyday spaces.
-    </p>
-  </div>
+  <h1>Handmade Mini Lampshade Fairy Lights & Eco-Friendly Gifts</h1>
 
-  
+  <p class="intro">
+    Welcome to MTNestCrafts, a small eco-conscious craft studio where recycled materials
+    are transformed into beautiful, handmade mini lampshade fairy lights and unique
+    eco-friendly gifts. Designed and made in Dorset, each piece is thoughtfully created
+    to reduce waste and give discarded materials a second life — bringing warmth, light
+    and a little joy into everyday spaces.
+  </p>
+
+  <h2>Slow-made. Sustainable. Full of character.</h2>
 </section>
+
+</body>
+</html>
+
+
 
 <section class="products">
   <h2>Featured Creations</h2>
