--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 </header>
 
 <section class="hero">
-  <h1>Handmade Mini Lampshade Fairy Lights & Eco-Friendly Gifts</h1>
+  <h1 class="brand-name">MTNestCrafts</h1>
+
+  <h2 class="hero-subtitle">
+    Handmade Mini Lampshade Fairy Lights & Eco-Friendly Gifts
+  </h2>
 
   <p class="intro">
     Welcome to MTNestCrafts, a small eco-conscious craft studio where recycled materials
