--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 </header>
 
 <section class="hero">
-  <h1 class="brand-name">MTNestCrafts</h1>
+  <div class="hero-heading">
+    <h1 class="brand-name">MTNestCrafts</h1>
 
-  <h2 class="hero-subtitle">
-    Handmade Mini Lampshade Fairy Lights & Eco-Friendly Gifts
-  </h2>
+    <h2 class="hero-subtitle">
+      Handmade Mini Lampshade Fairy Lights & Eco-Friendly Gifts
+    </h2>
+  </div>
 
   <p class="intro">
     Welcome to MTNestCrafts, a small eco-conscious craft studio where recycled materials
@@ -34,6 +36,7 @@
     to reduce waste and give discarded materials a second life — bringing warmth, light
     and a little joy into everyday spaces.
   </p>
+
 
   <h2>Slow-made. Sustainable. Full of character.</h2>
 </section>
