--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,11 @@
 <body>
   <header class="site-header">
     <nav class="nav">
-      <a href="index.html" class="active">Home</a>
+      <a href="index.html">Home</a>
 
-      <a href="about.html" class="active">About</a>
+      <a href="about.html">About</a>
 
-      <a href="shop.html" class="active">Shop</a>
+      <a href="shop.html">Shop</a>
 >
       <a href="contact.html" class="active">Contact</a>
     </nav>
@@ -26,31 +26,19 @@
     <section class="hero">
       <h1>Get in Touch</h1>
       <p class="intro">
-        Questions, custom ideas or just fancy saying hello?
+       If you'd like to ask a question, check availablility or discuss a custom piece, I'd love to hear from you.
       </p>
     </section>
 
     <section class="contact-text">
       <p>
-        If you’ve spotted something you like, have a question about an item,
-        or would like to discuss a custom piece, I’d love to hear from you.
-      </p>
-
-      <p>
-        You can contact me directly by email, or via social media — I try to reply as soon as I can.
+       You can contact me directly by email, or via social media - i try to reply as soon as I can.
+     
       </p>
     </section>
-
-    
-
+   
     <section class="contact-info">
  
-
-  <p>
-    If you’d like to ask a question, check availability, or discuss a custom piece,
-    you’re very welcome to email me directly:
-  </p>
-
   <p>
     <strong>Email:</strong>
     <a href="mailto:andrea.mtnestcrafts@gmail.com">
