--- a/about.html
+++ b/about.html
@@ -29,8 +29,6 @@
 <section class="about-image">
   <img src="images/daveandrea.jpeg" class="about-photo-small" alt="Dave and Andrea" />
 </section>
-
-
     
     <section class="text-block">
   <h2 class="name-heading">Andrea</h2>
@@ -55,27 +53,22 @@
   </p>
 
   <p>
-    This allowed me to work when I was feeling well and not to feel so guilty when I
-    couldn’t. Fast forward to the present day and I am still here, making unique,
+    This allows me to work when I am feeling well and not to feel so guilty when I
+    can't. Fast forward to the present day and I am still here, making unique,
     vintage-style lampshade fairy lights and bottle lights — repurposing rubbish and
     saving plastic from landfill.
   </p>
 </section>
 
-
    <section class="about-image">
  <img src="images/mini-map-lampshade-fairylights.jpg" class="about-photo-small" alt="Mini lampshade fairy lights"/>
 
 
-
 </section>
-
-
   
 
     <section class="team">
      
-
       <div class="team-member">
   <h2 class="name-heading">Dave</h2>
 
