--- a/shop.html
+++ b/shop.html
@@ -25,7 +25,7 @@
 
   <main class="content">
     <section class="hero">
-      <h1>The Shop</h1>
+      <h1>Shop MTNestCrafts</h1>
       <p class="intro">
         Handmade, recycled creations — available via our Etsy shop.
       </p>
@@ -37,7 +37,10 @@
         Because of this, availability changes regularly.
       </p>
       <p>
-        To keep things simple and up to date, all purchases are handled through our Etsy shop.
+        All purchases are handled through our Etsy shop, click on the links below.
+        You can also find my creations in Absolute Artisans, Cranborne Rd, Wimborne, Dorset. BH21 4HW
+        and in Buttons & Bows Gift Shop, The Courtyard Craft Centre, Huntick Rd, Lytchett Minster, Dorset. BH16 6BA
+
       </p>
     </section>
 
@@ -59,7 +62,7 @@
     </section>
 
     <section class="product-section">
-      <h2>Mini Lampshade Fairy Lights</h2>
+      <h2>Mini Lampshade Fairy Lights and Craft Kits</h2>
       <p>
         Made using recycled festival taster cups, carefully cleaned and repurposed into charming
         mini lampshade fairy lights.
@@ -107,8 +110,8 @@
     <section class="product-section">
       <h2>Avocado Mushroom Air Fresheners and other Random Upcycles</h2>
       <p>
-        A fun and quirky newer addition to MTNestCrafts.
-        Hand carved avocado stone air fresheners with an eco-conscious approach.
+        The handcarved avocado stone air fresheners are a quirky new addition to MTNestCrafts.
+        Made using a wood slice from branches trimmed from MTNest HQ and waste fabric on the back.
       </p>
      <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="shop-image-link">
  <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts"
