--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 
     <section class="contact-text">
       <p>
-       You can contact me directly by email, or via social media - i try to reply as soon as I can.
+       You can contact me directly by email, or via social media - I try to reply as soon as I can.
      
       </p>
     </section>
