--- a/shop.html
+++ b/shop.html
@@ -112,6 +112,8 @@
       <p>
         The handcarved avocado stone air fresheners are a quirky new addition to MTNestCrafts.
         Made using a wood slice from branches trimmed from MTNest HQ and waste fabric on the back.
+        Other random upcycles include - Map coasters, made from old tiles and maps, Art Plaques which are handpainted 'House number seconds'
+        and Bunting made from scrap ply wood and old maps.
       </p>
      <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="shop-image-link">
  <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts"
