--- a/about.html
+++ b/about.html
@@ -26,10 +26,28 @@
       <h1>Our Story</h1>
       <p class="intro">Handmade, unique eco-gifts, created with care in Dorset.</p>
     </section>
-<section class="about-image">
-  <img src="images/daveandrea.jpeg" class="about-photo-small" alt="Dave and Andrea" />
+<section class="about-image-grid story-images">
+
+  <img
+    src="images/daveandrea.jpeg"
+    alt="Dave and Andrea of MTNestCrafts"
+    class="award-photo"
+  />
+
+  <img
+    src="images/mini-map-lampshade-fairylights.jpg"
+    alt="Mini lampshade fairy lights made from recycled materials"
+    class="award-photo"
+  />
+
+  <img
+    src="images/mini-lampshade-fairylights-ghost.jpg"
+    alt="Ghost style mini lampshade fairy lights"
+    class="award-photo"
+  />
+
 </section>
-    
+
     <section class="text-block">
   <h2 class="name-heading">Andrea</h2>
 
