--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
   </p>
 
 
-  <h2>Slow-made. Sustainable. Full of character.</h2>
+  <h2 class="center-heading">Slow-made. Sustainable. Full of character.</h2>
+
 </section>
 
 </body>
@@ -47,7 +48,8 @@
 
 
 <section class="products">
-  <h2>Featured Creations</h2>
+ <h2 class="center-heading">Featured Creations</h2>
+
 <div class="product-grid">
 
   <div class="product">
