--- a/shop.html
+++ b/shop.html
@@ -25,7 +25,8 @@
 
   <main class="content">
     <section class="hero">
-      <h1>Shop MTNestCrafts</h1>
+     <h1 class="center-heading">Shop MTNestCrafts</h1>
+
       <p class="intro">
         Handmade, recycled creations — available via our Etsy shop.
       </p>
@@ -45,7 +46,7 @@
     </section>
 
     <section class="product-section">
-      <h2>Bottle Lights</h2>
+      <h2>class="centre-heading">Bottle Lights</h2>
       <p>
         Hand painted and decoupaged bottle lights created from unusual bottles saved from landfill.
         Each piece is unique.
@@ -62,7 +63,7 @@
     </section>
 
     <section class="product-section">
-      <h2>Mini Lampshade Fairy Lights and Craft Kits</h2>
+      <h2>class="centre-heading">Mini Lampshade Fairy Lights and Craft Kits</h2>
       <p>
         Made using recycled festival taster cups, carefully cleaned and repurposed into charming
         mini lampshade fairy lights.
@@ -85,7 +86,10 @@
     </section>
 
     <section class="product-section">
-      <h2>Guitar Shelves</h2>
+     <h2 class="center-heading">
+  Guitar Shelves, Avocado Mushroom Air Fresheners and other Random Upcycles
+</h2>
+
       <p>
         Up-cycled guitars transformed into functional wall shelves.
         No two pieces are ever the same.
