--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 
   <main class="content">
     <section class="hero">
-      <h1>Our Story</h1>
+      <h1>class="centre-heading">Our Story</h1>
       
     </section>
 <section class="about-image-grid story-images">
@@ -49,7 +49,7 @@
 </section>
 
     <section class="text-block">
-  <h2 class="name-heading">Andrea</h2>
+  <h2 class="centre-name-heading">Andrea</h2>
 
   <p>
     I’m Andrea, a recycler of rubbish and founder of <strong>MTNestCrafts</strong>,
@@ -88,7 +88,7 @@
     <section class="team">
      
       <div class="team-member">
-  <h2 class="name-heading">Dave</h2>
+  <h2 class="centre-name-heading">Dave</h2>
 
   <p>
     The husband, the dad, the practical one. Dependable, funny, kind — and endlessly
@@ -128,7 +128,7 @@
 
 
       <div class="team-member">
-  <h3>Sustainability Awards</h3>
+  <h3>class="centre-heading">Sustainability Awards</h3>
 
   <p>
     MTNestCrafts has been recognised for its commitment to sustainability:
