--- a/about.html
+++ b/about.html
@@ -23,7 +23,8 @@
 
   <main class="content">
     <section class="hero">
-      <h1>class="centre-heading">Our Story</h1>
+      <h1 class="centre-heading">Our Story</h1>
+
       
     </section>
 <section class="about-image-grid story-images">
@@ -49,7 +50,8 @@
 </section>
 
     <section class="text-block">
-  <h2 class="centre-name-heading">Andrea</h2>
+  <h2 class="center-heading">Andrea</h2>
+
 
   <p>
     I’m Andrea, a recycler of rubbish and founder of <strong>MTNestCrafts</strong>,
@@ -81,7 +83,8 @@
     <section class="team">
      
       <div class="team-member">
-  <h2 class="centre-name-heading">Dave</h2>
+ <h2 class="center-heading">Dave</h2>
+
 
   <p>
     The husband, the dad, the practical one. Dependable, funny, kind — and endlessly
@@ -121,7 +124,8 @@
 
 
       <div class="team-member">
-  <h3>class="centre-heading">Sustainability Awards</h3>
+  <h3 class="center-heading">Sustainability Awards</h3>
+
 
   <p>
     MTNestCrafts has been recognised for its commitment to sustainability:
