--- a/shop.html
+++ b/shop.html
@@ -46,7 +46,7 @@
     </section>
 
     <section class="product-section">
-      <h2>class="centre-heading">Bottle Lights</h2>
+      <h2 class="centre-heading">Bottle Lights</h2>
       <p>
         Hand painted and decoupaged bottle lights created from unusual bottles saved from landfill.
         Each piece is unique.
@@ -86,9 +86,9 @@
     </section>
 
     <section class="product-section">
-     <h2 class="center-heading">
-  Guitar Shelves, Avocado Mushroom Air Fresheners and other Random Upcycles
-</h2>
+     <h2 class="center-heading">Guitar Shelves</h2>
+ 
+
 
       <p>
         Up-cycled guitars transformed into functional wall shelves.
