--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About | MTNestCrafts</title>
+  <title>Shop | MTNestCrafts</title>
+
 
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -12,13 +13,11 @@
 <body>
   <header class="site-header">
     <nav class="nav">
-      <a href="index.html" class="active">Home</a>
+     <a href="index.html">Home</a>
+<a href="about.html">About</a>
+<a href="shop.html" class="active">Shop</a>
+<a href="contact.html">Contact</a>
 
-     <a href="about.html" class="active">About</a>
-
-      <a href="shop.html" class="active">Shop</a>
-
-     <a href="contact.html" class="active">Contact</a>
 
     </nav>
   </header>
@@ -46,7 +45,8 @@
     </section>
 
     <section class="product-section">
-      <h2 class="centre-heading">Bottle Lights</h2>
+     <h2 class="center-heading">Bottle Lights</h2>
+
       <p>
         Hand painted and decoupaged bottle lights created from unusual bottles saved from landfill.
         Each piece is unique.
@@ -63,10 +63,11 @@
     </section>
 
     <section class="product-section">
-      <h2>class="centre-heading">Mini Lampshade Fairy Lights and Craft Kits</h2>
+ <h2 class="center-heading">Mini Lampshade Fairy Lights and Craft Kits</h2>
+
       <p>
         Made using recycled festival taster cups, carefully cleaned and repurposed into charming
-        mini lampshade fairy lights.
+        quirky, vintage style mini lampshade fairy lights.
       </p>
    <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="shop-image-link">
   <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts"
@@ -92,7 +93,7 @@
 
       <p>
         Up-cycled guitars transformed into functional wall shelves.
-        No two pieces are ever the same.
+        No two pieces are ever the same. All guitars were broken and destined for the tip.
       </p>
      <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="shop-image-link">
  <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts"
@@ -110,31 +111,31 @@
 
      
     </section>
+<section class="product-section">
+  <h2 class="center-heading">
+    Avocado Mushroom Air Fresheners and other Random Upcycles
+  </h2>
 
-    <section class="product-section">
-      <h2>Avocado Mushroom Air Fresheners and other Random Upcycles</h2>
-      <p>
-        The handcarved avocado stone air fresheners are a quirky new addition to MTNestCrafts.
-        Made using a wood slice from branches trimmed from MTNest HQ and waste fabric on the back.
-        Other random upcycles include - Map coasters, made from old tiles and maps, Art Plaques which are handpainted 'House number seconds'
-        and Bunting made from scrap ply wood and old maps.
-      </p>
-     <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="shop-image-link">
- <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts"
-   target="_blank"
-   class="shop-image-link">
+  <p>
+    The handcarved avocado stone air fresheners are a quirky new addition to MTNestCrafts.
+    Made using a wood slice from branches trimmed from MTNest HQ and waste fabric on the back.
+    Other random upcycles include - Map coasters, made from old tiles and maps, Art Plaques which are handpainted 'House number seconds'
+    and Bunting made from scrap ply wood and old maps. All my creations are not massed produced, they are made from repurposing discarded waste materials,
+    so check my Etsy shop for availability.
+  </p>
 
-  <img
-    src="images/random-upcycle-collage.jpeg"
-    alt="Handcarved avocado stone air fresheners and other upcycles by MTNestCrafts"
-    class="shop-image"
-  />
+  <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts"
+     target="_blank"
+     class="shop-image-link">
 
-</a>
+    <img
+      src="images/random-upcycle-collage.jpeg"
+      alt="Handcarved avocado stone air fresheners and other upcycles by MTNestCrafts"
+      class="shop-image"
+    />
+  </a>
+</section>
 
-
-     
-    </section>
 
     <section class="cta">
       <p>
