--- a/about.html
+++ b/about.html
@@ -33,19 +33,22 @@
   <img
     src="images/daveandrea.jpeg"
     alt="Dave and Andrea of MTNestCrafts"
-    class="award-photo"
+    class="about-photo"
+
   />
 
   <img
     src="images/mini-map-lampshade-fairylights.jpg"
     alt="Mini lampshade fairy lights made from recycled materials"
-    class="award-photo"
+   class="about-photo"
+
   />
 
   <img
     src="images/mini-lampshade-fairylights-ghost.jpg"
     alt="Ghost style mini lampshade fairy lights"
-    class="award-photo"
+   class="about-photo"
+
   />
 
 </section>
