--- a/shop.html
+++ b/shop.html
@@ -125,6 +125,8 @@
     so check my Etsy shop for availability.
   </p>
 
+ <div class="shop-image-row">
+
   <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts"
      target="_blank"
      class="shop-image-link">
@@ -134,8 +136,22 @@
       alt="Handcarved avocado stone air fresheners and other upcycles by MTNestCrafts"
       class="shop-image"
     />
+
   </a>
-</section>
+
+  <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts"
+     target="_blank"
+     class="shop-image-link">
+
+    <img
+      src="images/mushroom-air-freshener-collage.jpg"
+      alt="Handcarved mushroom air fresheners by MTNestCrafts"
+      class="shop-image"
+    />
+
+  </a>
+
+</div>
 
 
     <section class="cta">
