--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,143 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Privacy Policy | MTNestCrafts</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 
+<body>
+
+<header>
+  <h1 class="centre-heading">Privacy Policy</h1>
+</header>
+
+<main class="content">
+
+<section class="text-block">
+
+<p><strong>Last updated:</strong> 12/02/2026</p>
+
+<p>Thank you for visiting MTNestCrafts! Your privacy matters to me...</p>
+ and I want to be clear about how your personal information is collected, used, shared and protected.
+
+This Privacy Policy applies to information I collect when you:
+
+make a purchase from my shop
+
+contact me via my website or social media
+
+otherwise interact with my business online
+
+1. Who I am and how to contact me
+
+MTNestCrafts
+Email: andrea.mtnestcrafts@gmail.com
+
+I am the data controller for the personal information described in this policy.
+
+2. Personal information I collect and why
+
+To fulfil your orders and run my business I may collect:
+
+Contact details — name, address, email
+
+Order details — product ordered, quantity, price
+
+Payment information — handled by Etsy/third parties
+
+Additional info if you contact me directly (e.g., for custom orders)
+
+This information is collected:
+
+to process and fulfil your order
+
+to respond to your messages or questions
+
+to comply with legal obligations (e.g., tax records)
+
+I do not send newsletters or marketing emails unless you explicitly opt in.
+
+Legal bases for processing include:
+
+contract necessity (to fulfil orders)
+
+legal obligation
+
+legitimate interest (improving my services)
+
+3. Sharing your information
+
+Your personal information may be shared in limited circumstances, including:
+
+Etsy — as required to manage orders and comply with their platform terms
+
+Service providers — e.g., delivery companies, payment processors
+
+Legal obligations — if required by law or to respond to legal requests
+
+I do not sell or rent your personal information to third parties.
+
+4. Data retention
+
+I keep your information only as long as necessary to:
+
+complete your order
+
+satisfy legal, tax or accounting requirements
+
+resolve disputes
+
+In most cases this is no longer than 4 years, unless required by law.
+
+5. Transfers outside the UK or EU
+
+Your data may be processed by third parties located outside the UK/EU (for example, through Etsy’s systems).
+
+Where this happens, appropriate safeguards are in place to protect your information.
+
+6. Your rights
+
+If you live in the UK, EU or similar regions, you may have rights to:
+
+access the personal data I hold about you
+
+update or correct information
+
+request deletion of your information
+
+object to certain processing activities
+
+If you wish to exercise any of these rights, please contact me at the email above.
+
+You also have the right to complain to “the UK Information Commissioner’s Office (ICO)”
+7. Changes to this policy
+
+I may update this policy from time to time. The “Last updated” date at the top will always reflect the latest version.
+8. Website Data and Cookies
+
+When you visit this website, basic technical information may be automatically collected by my website hosting provider, such as:
+
+IP address
+
+browser type
+
+pages visited
+
+date and time of visit
+
+This information is used for security, site performance and basic analytics.
+
+This website does not use advertising cookies or tracking for marketing purposes.
+  Last updated on 12/02/2026
+ </section>
+
+</main>
+
+<footer>
+  <a href="privacy.html">Privacy Policy</a>
+  <p>© MTNestCrafts · Handmade in Dorset · #waronwaste</p>
+</footer>
+
+</body>
+</html> 
