--- a/privacy.html
+++ b/privacy.html
@@ -4,6 +4,19 @@
   <meta charset="UTF-8">
   <title>Privacy Policy | MTNestCrafts</title>
   <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+</head>
+
+<body>
+  <header class="site-header">
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="shop.html">Shop</a>
+      <a href="contact.html">Contact</a>
+      <a href="privacy.html" class="active">Privacy</a>
+    </nav>
+  </header>
 </head>
 
 <body>
