--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <a href="about.html">About</a>
     <a href="shop.html">Shop</a>
     <a href="contact.html">Contact</a>
+    <a href="privacy.html">Privacy</a>
+
   </nav>
 </header>
 
