--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
 <a href="about.html" class="active">About</a>
 <a href="shop.html">Shop</a>
 <a href="contact.html">Contact</a>
+<a href="privacy.html">Privacy</a>
 
 
     </nav>
