--- a/shop.html
+++ b/shop.html
@@ -17,6 +17,7 @@
 <a href="about.html">About</a>
 <a href="shop.html" class="active">Shop</a>
 <a href="contact.html">Contact</a>
+<a href="privacy.html">Privacy</a>
 
 
     </nav>
