--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,8 @@
       <a href="shop.html">Shop</a>
 >
       <a href="contact.html" class="active">Contact</a>
+      <a href="privacy.html">Privacy</a>
+
     </nav>
   </header>
 
