--- a/privacy.html
+++ b/privacy.html
@@ -26,6 +26,9 @@
 </header>
 
 <main class="content">
+<section class="hero">
+  <h1 class="centre-heading">Privacy Policy</h1>
+</section>
 
 <section class="text-block">
 
