--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 
   </nav>
 </header>
+<div class="vine-divider-top">
+  <img src="images/vine-divider.png" alt="" />
+</div>
 
 <section class="hero">
   <div class="hero-heading">
@@ -140,6 +143,9 @@
       <i class="fab fa-etsy"></i>
     </a>
   </div>
+<div class="vine-divider-bottom">
+  <img src="images/vine-divider.png" alt="" />
+</div>
 
   <p>© MTNestCrafts · Handmade in Dorset · #waronwaste</p>
 </footer>
