--- a/about.html
+++ b/about.html
@@ -21,6 +21,9 @@
 
     </nav>
   </header>
+<div class="vine-divider-top">
+  <img src="images/vine-divider.png" alt="" />
+</div>
 
   <main class="content">
     <section class="hero">
@@ -161,6 +164,9 @@
       </p>
     </section>
   </main>
+<div class="vine-divider-bottom">
+  <img src="images/vine-divider.png" alt="" />
+</div>
 
   <footer class="site-footer">
   <div class="social-icons">
