--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,9 @@
 
     </nav>
   </header>
+<div class="vine-divider-top">
+  <img src="images/vine-divider.png" alt="" />
+</div>
 
   <main class="content">
     <section class="hero">
@@ -78,6 +81,9 @@
   </main>
 
    </main>
+<div class="vine-divider-bottom">
+  <img src="images/vine-divider.png" alt="" />
+</div>
 
   <footer class="site-footer">
     <div class="social-icons">
