--- a/shop.html
+++ b/shop.html
@@ -22,6 +22,9 @@
 
     </nav>
   </header>
+<div class="vine-divider-top">
+  <img src="images/vine-divider.png" alt="" />
+</div>
 
   <main class="content">
     <section class="hero">
@@ -163,6 +166,9 @@
       <a href="contact.html" class="button">Contact Me</a>
     </section>
   </main>
+<div class="vine-divider-bottom">
+  <img src="images/vine-divider.png" alt="" />
+</div>
 
 <footer class="site-footer">
   <div class="social-icons">
