--- a/privacy.html
+++ b/privacy.html
@@ -17,6 +17,10 @@
       <a href="privacy.html" class="active">Privacy</a>
     </nav>
   </header>
+  <div class="vine-divider-top">
+  <img src="images/vine-divider.png" alt="" />
+</div>
+
 </head>
 
 <body>
@@ -147,6 +151,9 @@ This website does not use advertising cookies or tracking for marketing purposes
  </section>
 
 </main>
+<div class="vine-divider-bottom">
+  <img src="images/vine-divider.png" alt="" />
+</div>
 
 <footer>
   <a href="privacy.html">Privacy Policy</a>
