--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MTNestCrafts | Handmade Mini Lampshade Fairy Lights & Eco Gifts</title>
+<meta name="description" content="MTNestCrafts – Handmade mini lampshade fairy lights and unique eco-friendly gifts made in Dorset. Shop recycled bottle lights, upcycled shelves, and more." />
 
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -35,7 +36,7 @@
   </div>
 
   <p class="intro">
-    Welcome to MTNestCrafts, a small eco-conscious craft studio where recycled materials
+    Welcome to MTNestCrafts, a small eco-conscious home studio in Dorset where recycled materials
     are transformed into beautiful, handmade mini lampshade fairy lights and unique
     eco-friendly gifts. Designed and made in Dorset, each piece is thoughtfully created
     to reduce waste and give discarded materials a second life — bringing warmth, light
@@ -61,7 +62,7 @@
   <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank">
     <img
   src="images/pink-fairylights.jpg"
-  alt="Mini lampshade fairy lights"
+  alt="Mini lampshade fairy lights handmade from recycled materials batteries included"
   class="product-image"
 />
 
@@ -75,7 +76,7 @@
   <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank">
     <img
       src="images/copper-fern-bottlelamp.jpg"
-      alt="Handmade recycled bottle lamp"
+      alt="Handmade recycled bottle lamp hand painted eco friendly gift"
       class="product-image"
     />
   </a>
@@ -88,7 +89,7 @@
   <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank">
     <img
       src="images/guitar-shelf.jpg"
-      alt="Upcycled guitar shelf"
+      alt="Upcycled guitar shelf made from repurposing broken accoustic guitars"
       class="product-image"
     />
   </a>
@@ -100,7 +101,7 @@
   <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank">
     <img
       src="images/avocado-mushroom-airfreshener.jpg"
-      alt="Avocado mushroom air freshener"
+      alt="Avocado mushroom air freshener made by carving avocado stones and mounting them on a garden wood slice"
       class="product-image"
     />
   </a>
