--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@type":"Store",
+  "name":"MTNestCrafts",
+  "description":"Handmade mini lampshade fairy lights and eco-friendly gifts in Dorset",
+  "url":"https://www.mtnestcrafts.co.uk",
+  "logo":"https://www.mtnestcrafts.co.uk/images/logo.png"
+}
+</script>
+
 </head>
 
 <body>
