--- a/shop.html
+++ b/shop.html
@@ -75,7 +75,7 @@
      class="shop-image-link">
 
     <img
-      src="images/bottle-collage.jpg"
+      src="images/bottlecollage.jpg"
       alt="More handmade bottle lights by MTNestCrafts"
       class="shop-image"
     />
@@ -113,7 +113,7 @@
      class="shop-image-link">
 
     <img
-      src="images/craft-kit-collage.jpg"
+      src="images/craftkitcollage.jpg"
       alt="Mini lampshade craft kits by MTNestCrafts"
       class="shop-image"
     />
@@ -154,7 +154,7 @@
      class="shop-image-link">
 
     <img
-      src="images/shelf-collage.jpg"
+      src="images/shelfcollage.jpg"
       alt="More upcycled guitar shelves by MTNestCrafts"
       class="shop-image"
     />
