--- a/index.html
+++ b/index.html
@@ -126,8 +126,10 @@
 
 
 <div class="shop-link">
-  <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank">
-    Shop the collection
+  <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts"
+     target="_blank"
+     class="eco-button">
+    Shop the Collection
   </a>
 </div>
 <div class="vine-divider-bottom">
