--- a/shop.html
+++ b/shop.html
@@ -214,7 +214,7 @@
         Looking for something custom or spotted something you like on social media?
         Feel free to get in touch.
       </p>
-      <a href="contact.html" class="button">Contact Me</a>
+      <a href="contact.html" class="eco-button">Contact Me</a>
     </section>
   </main>
 <div class="vine-divider-bottom">
